add:参数校验
Signed-off-by: Alex <46887064+alex-oos@users.noreply.github.com>